--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html {
     font-size: 20px;
 }
 
+body {
+    background: url("images/background.jpg");
+}
+
 .home-section {
     text-align: center;
 }
