--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
 body {
     background: url("images/background.jpg");
     background-size: cover;
+    color: #FFFFFF;
 }
 
 .home-section {
