--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ a {
 
 .main-nav-links {
     display: flex;
+    font-family: "Courier New";
     font-size: 2.0rem;
     gap: 1.0rem;
     justify-content: flex-end;
