Change ".main-nav-link" to ".main-navbar"

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a {
     font-size: 3.0rem;
 }
 
-.main-nav-links {
+.main-navbar {
     display: flex;
     font-family: "Courier New";
     font-size: 2.0rem;
