--- a/style.css
+++ b/style.css
@@ -40,4 +40,6 @@ a {
     color: #f3b7ff;
     border: 0.1rem solid #5d23e9;
     border-radius: 0.25rem;
+    outline: 0.1rem solid #d137ee;
+    outline-offset: 0.1rem;
 }
