--- a/style.css
+++ b/style.css
@@ -42,4 +42,5 @@ a {
     border-radius: 0.25rem;
     outline: 0.1rem solid #d137ee;
     outline-offset: 0.1rem;
+    box-shadow: 0 0 2.5rem #d137ee, 0 0 1.0rem #5d23e9, inset 0 0 1.5rem #5d23e9;
 }
